--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,5 @@
-
 {
 	"rules": {
-	  "@typescript-eslint/no-explicit-any": "warn",
-	  "import/no-anonymous-default-export": "off"
+	  "@typescript-eslint/no-explicit-any": ["error", { "ignoreRestArgs": true }]
 	}
   }
