--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
+    "types": ["next", "next/types"],
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
