--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "sanity": "^3.74.1",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^2.0.0",
