--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,3 @@
 {
-	"rules": {
-	  "@typescript-eslint/no-explicit-any": ["error", { "ignoreRestArgs": true }]
-	}
-  }
+	"extends": ["next/core-web-vitals"]
+}
